# MLOps

./: .gitignore  README.md  cloudbuild.yaml  coveragerc  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: data-change.yaml  model-change.yaml  tests.yaml
MLOPS/: README.md  pyproject.toml  requirements.txt  tasks.py
MLOPS/configs/: Exp1.yaml  Exp2.yaml  Exp3.yaml
MLOPS/data/processed/: test_target.pt  train_target.pt
MLOPS/dockerfiles/: evaluate.dockerfile  train.dockerfile
MLOPS/docs/: mkdocs.yaml
MLOPS/docs/source/: index.md
MLOPS/outputs/2025-01-15/12-09-04/.hydra/: hydra.yaml
MLOPS/outputs/2025-01-15/13-49-48/.hydra/: hydra.yaml
MLOPS/outputs/2025-01-15/13-52-12/.hydra/: hydra.yaml
MLOPS/outputs/2025-01-15/13-53-17/.hydra/: hydra.yaml
MLOPS/outputs/2025-01-16/10-49-17/.hydra/: hydra.yaml
MLOPS/outputs/2025-01-16/11-36-14/.hydra/: config.yaml  (+1 more)
MLOPS/src/catdogdetection/: data.py  evaluate.py  model.py  profiling.py  train.py
MLOPS/tests/: test_data.py  test_model.py
configs/: Exp1.yaml  Exp2.yaml  Exp3.yaml  Exp4.yaml  Exp5.yaml  Exp6.yaml
data/: .gitignore  raw.dvc
data/processed/: test_target.pt  train_target.pt
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
log/: MacBook-Air-tilhrende-Kaare.local_67282.1736796587678361000.pt.trace.json
reports/: README.md  Report.txt  report.html
src/catdogdetection/: api.py  data.py  download_bucket.py  evaluate.py  singleImageEval.py  train.py
tests/: test_api.py  test_data.py  test_model.py  test_profiling.py
